--- a/index.html
+++ b/index.html
@@ -29,44 +29,44 @@
   <br>
   <br>
   <h1 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; color: #d9e1e8;">Vorstellungen</h1>
-  <div class="row" style="height: 100px; font-family: 'EB Garamond', serif; padding-bottom: 5%;">
-    <div class="column" style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center;">
-      <div>
-        <h4 style="color: #d9e1e8; text-decoration: none;">Programm I - Air</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Blechbläser-Ensemble</h5>
-        <br>
-        <br>
-        <h4 style="color: #d9e1e8; text-decoration: none;">Programm II - La Mer</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Symph. Kammerorchester</h5>
-        <br>
-        <br>
-        <h4 style="color: #d9e1e8; text-decoration: none;">Programm III - Tides</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Vokal-Ensemble & Streicher</h5>
-        <br>
-        <br>
-        <h4 style="color: #d9e1e8; text-decoration: none;">Programm IV - Wandel</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Streicher & Holzbläser</h5>
-      </div>
-    </div>
-    <div class="column" style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center;">
-      <div>
-        <h4 style="color: #d9e1e8; text-decoration: none;">18:30 Uhr / 21:30 Uhr</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Blechbläser-Ensemble</h5>
-        <br>
-        <br>
-        <h4 style="color: #d9e1e8; text-decoration: none;">19:30 Uhr</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Symph. Kammerorchester</h5>
-        <br>
-        <br>
-        <h4 style="color: #d9e1e8; text-decoration: none;">20:30 Uhr / 23:30 Uhr</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Vokal-Ensemble & Streicher</h5>
-        <br>
-        <br>
-        <h4 style="color: #d9e1e8; text-decoration: none;">22:30 Uhr</h4>
-        <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Streicher & Holzbläser</h5>
-      </div>
-    </div>
+  <div class="programme" style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center;">
+    <br>
+  <div>
+    <h4 style="color: #d9e1e8; text-decoration: none;">Programm I - Air</h4>
+    <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Blechbläser-Ensemble</h5>
   </div>
+  <div>
+    <h6 style="color: #d9e1e8; text-decoration: none;">18:30 Uhr / 21:30 Uhr</h6>
+  </div>
+<br>
+        <br>
+  <div>
+    <h4 style="color: #d9e1e8; text-decoration: none;">Programm II - La Mer</h4>
+    <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Symph. Kammerorchester</h5>
+  </div>
+  <div>
+    <h6 style="color: #d9e1e8; text-decoration: none;">19:30 Uhr</h6>
+  </div>
+<br>
+        <br>
+  <div>
+    <h4 style="color: #d9e1e8; text-decoration: none;">Programm III - Tides</h4>
+    <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Vokal-Ensemble & Streicher</h5>
+  </div>
+  <div>
+    <h6 style="color: #d9e1e8; text-decoration: none;">20:30 Uhr / 23:30 Uhr</h6>
+  </div>
+<br>
+        <br>
+  <div>
+    <h4 style="color: #d9e1e8; text-decoration: none;">Programm IV - Wandel</h4>
+    <h5 style="font-style: italic; color:  #d9e1e8; text-decoration: none;">Streicher & Holzbläser</h5>
+  </div>
+  <div>
+    <h6 style="color: #d9e1e8; text-decoration: none;">22:30 Uhr</h6>
+  </div>
+</div>
+  
   <div>
     <h1 style="font-family: EB Garamond, serif; text-align: center; padding-top: 25%; justify-content: center; color: #d9e1e8;">Mitwirkende</h1>
     <div class="row">
