--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h2 style="font-family: EB Garamond, serif; text-align: center; justify-content: center; padding-top: 15%; font-size: 10vw; color: #d9e1e8;">Museumsnacht 2025</h1>
   <h1 style="font-family: EB Garamond, serif; font-style: italic; text-align: center; justify-content: center; color: #d9e1e8;">-Scheffelhalle Singen-</h1>
   <br><br>
-  <h6 style="font-family: EB Garamond, serif; font-style: italic; text-align: center; justify-content: center; color: #d9e1e8;"> Über eine kleine Spende in die aufgestellten<br> Spendenkässchen zugunsten der ehrenamtlichen Musiker<br> würde wir uns sehr freuen!</h6>
+  <h6 style="font-family: EB Garamond, serif; font-style: italic; text-align: center; justify-content: center; color: #d9e1e8;"> Über eine kleine Spende in die aufgestellten<br> Spendenkässchen zugunsten der ehrenamtlichen Musiker<br> würden wir uns sehr freuen!</h6>
   <br>
   <br>
   <br>
