--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <br>
         Dennis Dörflinger - Trompete
         <br>
-        Paulina Glöckner - Sopran
+        Paulina Glöckler - Sopran
         <br>
         Lena Gollbach - Flöte 
         <br>
