--- a/tides.html
+++ b/tides.html
@@ -131,7 +131,7 @@
   <br>
   <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Sopran</h5>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
-    Paulina Glöckner, Flavia Götz, Franziska Graf, Maike Kraus, Sara Ribeiro, Leonie Schüttler
+    Paulina Glöckler, Flavia Götz, Franziska Graf, Maike Kraus, Sara Ribeiro, Leonie Schüttler
   </p>
   <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Alt</h5>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
